# safetensors

./: benchmark.py
bindings/python/: Cargo.toml
bindings/python/py_src/safetensors/: gpu.py  gpu.pyi
bindings/python/src/: gpu.rs  lib.rs
safetensors/: Cargo.toml  build.rs
safetensors/examples/: gpu_loading.rs  gpu_loading_uring.rs
safetensors/src/: lib.rs  tensor.rs
safetensors/src/gpu/: cuda.rs  error.rs  io_uring.rs  loader.rs  loader_uring.rs  memory.rs  mod.rs  stream.rs
